añadir página programa

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,9 +15,10 @@
   </title>
 
   <!-- CSS -->
+  <link rel="stylesheet" href="{{site.baseurl}}public/css/ddstyle.css">
   <link rel="stylesheet" href="{{site.baseurl}}public/css/poole.css">
   <link rel="stylesheet" href="{{site.baseurl}}public/css/syntax.css">
-  <link rel="stylesheet" href="{{site.baseurl}}public/css/ddstyle.css">
+  <link rel="stylesheet" href="{{site.baseurl}}public/css/tabs.css">
   <link href="https://fonts.googleapis.com/css2?family=Kufam:wght@400;700&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet"> 
   <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="{{site.baseurl}}public/images/icon/favicon-32x32.png">
