--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,5 +42,6 @@
         openButton$.classList.add('active')
       })
     </script>
+    <script src="{{site.baseurl}}public/js/tabs.js"></script>
   </body>
 </html>
