--- a/public/css/ddstyle.css
+++ b/public/css/ddstyle.css
@@ -250,7 +250,7 @@ img.dd-logo {
 
 .dd-terramur {
   text-align: center;
-  background: #eec9946b;
+  background: #a7efff;
 }
 
 .dd-main--box.dd-terramur h2 {
