--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,10 +10,7 @@
 {% assign noticias = site.posts | where: "categories","noticias" %}
 {% assign noticia = noticias.first %}
 
-{% assign pages_list = site.pages | sort: 'order' | where: "title_page", "beca-ursula" %}
-{% assign becapage = pages_list.first %}
-
-{% assign programas = site.pages | sort: 'order' | where: "title_page", "programa-terramur-2023" %}
+{% assign programas = site.pages | sort: 'order' | where: "title_page", "programa-terramur-2024" %}
 {% assign programa = programas.first %}
 
 <div class="dd-header">
@@ -23,67 +20,71 @@
 
 <section class="dd-main-section">
   <article class="dd-main--box dd-main--box-a1">
-    <h2>📌 No te pierdas nada</h2>
+    <article class="dd-main--box dd-main--box-a2">
+      <h2>📌 No te pierdas nada</h2>
 
-    <h3>Noticias</h3>
+      <h3>Noticias</h3>
 
-    {% if noticia.title %}
+      {% if noticia.title %}
       <p><a href="{{ noticia.url }}">{{ noticia.title }}</a> {{ noticia.description}}</p>
-    {% endif %}
+      {% endif %}
+    </article>
 
-    <h3>Beca Úrsula</h3>
-    <p>¿Tienes un podcast relacionado con la ciencia ficción, la fantasía, o el terror? ¿Te gustaría participar en un intercambio podcastero?</p>
-    <p>Si esto te interesa, aquí puedes conocer más sobre la iniciativa <a href="{{ becapage.url }}">Becas Úrsula</a></p>
-
-    <h3>Redes sociales</h3>
-
-    <div class="dd-social">
-      <ul>
-        <li><a href="https://twitter.com/DroidsAndDruids">Twitter</a></li>
-        <li><a href="https://instagram.com/DroidsAndDruids">Instagram</a></li>
-        <li><a href="https://www.ivoox.com/podcast-droids-and-druids_sq_f1919150_1.html">iVoox</a></li>
-        <li><a href="https://lektu.com/e/droidsdruids/2399">Lektu</a></li>
-        <li><a href="https://www.goodreads.com/group/show/1138379-club-de-lectura-de-droids-druids">Goodreads</a></li>
-        <li><a href="https://github.com/DroidsAndDruids">GitHub</a></li>
-      </ul>
-    </div>
-  </article>
-
-  <article class="dd-main--box dd-main--box-a2">
-    <h2>📻 Escucha el podcast</h2>
-    {% if podcast.title %}
+    <article class="dd-main--box dd-main--box-a2">
+      <h2>📻 Escucha el podcast</h2>
+      {% if podcast.title %}
       <h3>Último episodio</h3>
       <p><a href="{{ podcast.url }}">{{ podcast.title }}</a> {{ podcast.description}}</p>
-    {% endif %}
-  </article>
+      {% endif %}
+    </article>
 
-  <article class="dd-main--box dd-main--box-a3">
-    <h2>📰 Descárgate la revista</h2>
-    {% if revista.title %}
+    <article class="dd-main--box dd-main--box-a3">
+      <h2>📰 Descárgate la revista</h2>
+      {% if revista.title %}
       <h3>Último número</h3>
       <p><a href="{{ revista.url }}">{{ revista.title }}</a> {{ revista.description}}</p>
-    {% endif %}
-  </article>
+      {% endif %}
+    </article>
 
-  <article class="dd-main--box dd-main--box-a4">
-    <h2>📜 Lee el blog</h2>
-    {% if post.title %}
+    <article class="dd-main--box dd-main--box-a4">
+      <h2>📜 Lee el blog</h2>
+      {% if post.title %}
       {% assign author = post.author.first %}
       <h3>Último post</h3>
-      <p><a href="{{ post.url }}">{{ post.title }}</a> {{ post.description}}<span class="dd-post--author">- {{ author.name }}</span></p>
-    {% endif %}
+      <p><a href="{{ post.url }}">{{ post.title }}</a> {{ post.description}}<span class="dd-post--author">- {{
+          author.name }}</span></p>
+      {% endif %}
+    </article>
+
+    <article class="dd-main--box dd-main--box-a2">
+      <h3>Redes sociales</h3>
+
+      <div class="dd-social">
+        <ul>
+          <li><a href="https://twitter.com/DroidsAndDruids">Twitter</a></li>
+          <li><a href="https://instagram.com/DroidsAndDruids">Instagram</a></li>
+          <li><a href="https://www.ivoox.com/podcast-droids-and-druids_sq_f1919150_1.html">iVoox</a></li>
+          <li><a href="https://lektu.com/e/droidsdruids/2399">Lektu</a></li>
+          <li><a href="https://www.goodreads.com/group/show/1138379-club-de-lectura-de-droids-druids">Goodreads</a></li>
+          <li><a href="https://github.com/DroidsAndDruids">GitHub</a></li>
+        </ul>
+      </div>
+    </article>
+
   </article>
 
   <article class="dd-main--box dd-main--box-a5 dd-terramur">
-      <h2>
-        <a href="{% post_url noticias/2023-01-07-llega-el-festival-terramur %}">
-          🧚 TERRAMUR 2023 🚀
-        </a>
-      </h2>
+    <h2>
+      <a href="{% post_url noticias/2024-01-11-festival-terramur-2024 %}">
+        🧚 TERRAMUR 2024 🚀
+      </a>
+    </h2>
 
     <p>Festival de literatura fantástica de Murcia</p>
 
-    <p>Del 17 al 19 de Febrero de 2023</p>
+    <p>22 y 23 de Marzo</p>
+
+    <p>Centro cultural Puertas de Castilla</p>
 
     <p>
       <a href="{{ programa.url }}">
@@ -92,13 +93,13 @@
     </p>
 
     <p>
-      <a href="{% post_url noticias/2023-01-07-llega-el-festival-terramur %}">
+      <a href="{% post_url noticias/2024-01-11-festival-terramur-2024 %}">
         Más información
       </a>
     </p>
 
-    <a href="{% post_url noticias/2023-01-07-llega-el-festival-terramur %}">
-      <img src="{{ site.baseurl }}public/images/tiny.png" alt="Cartel Festival Terramur" />
+    <a href="{% post_url noticias/2024-01-11-festival-terramur-2024 %}">
+      <img src="{{ site.baseurl }}public/images/terramur_2024_small.png" alt="Cartel Festival Terramur 2024" />
     </a>
   </article>
 </section>
