--- a/_includes/header.html
+++ b/_includes/header.html
@@ -82,9 +82,9 @@
 
     <p>Festival de literatura fantástica de Murcia</p>
 
-    <p>22 y 23 de Marzo</p>
+    <p>21, 22, 23 y 24 de Marzo</p>
 
-    <p>Centro cultural Puertas de Castilla</p>
+    <p>Centro Cultural Puertas de Castilla</p>
 
     <p>
       <a href="{{ programa.url }}">
