--- a/_includes/header.html
+++ b/_includes/header.html
@@ -80,7 +80,7 @@
 
     <p>Festival de literatura fantástica de Murcia</p>
 
-    <p>Del 6 al 9 de Febrero/p>
+    <p>Del 6 al 9 de Febrero</p>
 
     <p>Centro Cultural Puertas de Castilla</p>
 
