Load script async

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -36,6 +36,6 @@
         openButton$.classList.add('active')
       })
     </script>
-    <script src="{{site.baseurl}}public/js/tabs.js"></script>
+    <script src="{{site.baseurl}}public/js/tabs.js" defer></script>
   </body>
 </html>
